--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/styles.css" rel="stylesheet">
-    
+    <meta name="csrf-token" content="<%= csrfToken %>" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title><%= title %></title> 
 </head>
@@ -14,6 +14,7 @@
         <div class="col-start-3 col-span-2">
             <h6 class="py-4 text-4xl font-bold">Login to your Admin  account</h6>
             <form action="/session" method="post">
+                <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
                 <div class="py-3">
                     <label for="email">Email:</label>
                     <input type="email" name="email" class="border border-gray-300 text-black-300 rounded p-2 w-full">
