--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="<%= csrfToken %>" />
     <link href="./css/styles.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <title><%= title %></title> 
@@ -13,6 +14,7 @@
         <div class="col-start-3 col-span-2">
             <h6 class="py-4">Signup as a new user</h6>
             <form action="/Admin" method="post">
+                <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
                 <div class="py-3">
                     <label for="userName">Username:</label>
                     <input type="text" name="userName" id="userName" class="border border-gray-300 text-black-300 rounded p-2 w-full">
